# Uni-Dock2

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci_tool.yml  conda.yml
conda-recipe/: conda_build_config.yaml  meta.yaml
docker/: Dockerfile.base
examples/free_docking/molecular_docking/: unidock_configurations.yaml
recipes/alignment/: ud2align_input_3D-Disco_MK14_3GI3_2PUU.json
unidock/: VERSION
unidock/unidock_engine/: .gitignore  CMakeLists.txt  README.md
unidock/unidock_engine/api/: CMakeLists.txt
unidock/unidock_engine/api/python/: CMakeLists.txt  pipeline.cpp  test_pipeline.py  test_runner.cpp
unidock/unidock_engine/api/python/test/: test_pipeline.py
unidock/unidock_engine/api/python/test/data/1W1P/: 1W1P_unidock2.json  ud2.yaml
unidock/unidock_engine/data/: config_template.yaml
unidock/unidock_engine/include/: CMakeLists.txt
unidock/unidock_engine/lib/: CMakeLists.txt
unidock/unidock_engine/scripts/: json2sdf.py  zalign.ipynb  zalign.py
unidock/unidock_engine/src/: CMakeLists.txt
unidock/unidock_engine/src/cluster/: cluster.h
unidock/unidock_engine/src/constants/: constants.h
unidock/unidock_engine/src/cuda/: bfgs.cuh  bfgs_wrapper.cu  cluster.cu  common.cu  common.cuh  mc.cu  model.cu  optimize.cu  struct_array_manager.cuh  struct_array_manager_wrapper.cu  task.cu  vina.cu
unidock/unidock_engine/src/format/: json.cpp  json.h  rapidjson_parser.cpp  rapidjson_parser.h
unidock/unidock_engine/src/geometry/: quaternion.h
unidock/unidock_engine/src/model/: model.h
unidock/unidock_engine/src/myutils/: common.h  errors.cpp  errors.h  matrix.h  mymath.h
unidock/unidock_engine/src/optimize/: optimize.h
unidock/unidock_engine/src/score/: bias.h  score.cpp  score.h  vina.h
unidock/unidock_engine/src/screening/: core.cpp  core.h  screening.cpp  screening.h
unidock/unidock_engine/src/task/: DockTask.cpp  DockTask.h
unidock/unidock_engine/test/: CMakeLists.txt
unidock/unidock_engine/test/data/5S8I/: 5S8I_unidock2.json
unidock/unidock_engine/test/feature/: .gitignore  CMakeLists.txt
unidock/unidock_engine/test/feature/bias_hbond/: run_test.sh  ud2.yaml  validate.py
unidock/unidock_engine/test/feature/cases/bias_hbond/: bias.sdf  input.json  ligand_ideal.sdf  ud2.yaml  validate.py
unidock/unidock_engine/test/unit/: CMakeLists.txt
unidock/unidock_engine/test/unit/cuda/: test_bfgs.cpp  test_struct_array_manager.cpp
unidock/unidock_engine/test/unit/format/: test_json.cpp
unidock/unidock_engine/test/unit/geometry/: test_quaternion.cpp  test_rotation.cpp
unidock/unidock_engine/test/unit/score/: test_bias.cpp
unidock/unidock_processing/cli/: docking.py
unidock/unidock_processing/io/: yaml.py
unidock/unidock_processing/ligand_topology/: utils.py
unidock/unidock_processing/ligand_topology/mol_graph/: __init__.py  atom_mapper_align.py  base.py  covalent.py  generic.py  template.py
unidock/unidock_processing/ligand_topology/rotatable_bond/: __init__.py  atom_mapper_align.py  base.py  generic.py
unidock/unidock_processing/test/data/ligand_topology/align/check_failed_case/: query.sdf  ref.sdf
unidock/unidock_processing/test/data/ligand_topology/align/root_atoms_case/: query.sdf  ref.sdf
unidock/unidock_processing/test/data/ligand_topology/align/torsion_case/: atom_mapping.json  query.sdf  ref.sdf
unidock/unidock_processing/test/scripts/ligand_topology/: test_mol_graph.py
unidock/unidock_processing/test/scripts/protocol/: test_constraint_docking.py  test_covalent_docking.py  test_free_docking.py
unidock/unidock_processing/test/scripts/receptor_topology/: test_receptor_topology.py
unidock/unidock_processing/test/scripts/yaml/: test_yaml_parsing.py
unidock/unidock_processing/unidocktools/: unidock_ligand_pose_writer.py  unidock_ligand_topology_builder.py  unidock_protocol_runner.py  unidock_receptor_topology_builder.py
